    one track from the album.
17. Don't try to reduce brackets when showing album name and year.
18. Add option to sort smart playlists by title.
19. Change toolbar colours if palette changes.
20. Add another qt5ct palette work-around.
21. Don't stop library scan just because of failure in 1 directory.
22. Handle empty VolumeIdentifier in MTP devices.
23. Add more actions to search page results.

2.3.2
-----
 1. Store actual song path for local files (mainly affects windows)
 2. When using Track Organizer to rename music tracks, rename any other files
    that have the same basename as the music file.
 3. Install cantata.png to use as Windows tray icon.
 4. Remove internal Samba share mounting code, this had some privilege
    escalation issues, and is not well tested.
 5. Use 32-bit unsigned int to store output IDs.
 6. When marking podcast episodes for download, and 'show only uplayed' is
    checked, then only download unplayed episodes.
 7. Fix smart playlists with a rating range and no song include/exclude rules.
 8. Enable proxy config settings page by default.
 9. Add Brazilian Portuguese translation - thanks to Wanderson Gonçalves Pereira
10. Fix 'Locate In Library / Album' for albums with musicbrainz ID.
11. Check HTTP stream URLs are valid URLs, and scheme starts with http.
12. Due to reports of crashes in libvlc code, default to using QtMultiMedia
    for HTTP stream playback on Linux builds (already default for Mac/Win).
13. Use ":/" as root path for windows folder browse, seems to then list each
    drive.
14. If a dynamic playlist has rating 0..5 stars, then include all songs (even
    those without an explicit rating).
15. Ubuntu icon theme is now named Yaru, so install there.
16. Don't install Yaru icon by default.

2.3.1
-----
 1. Update some translations.
 2. Set Smart rules 'files added in the last days' limit to 10*365
 3. Only sort playlists in folders view, and place these after tracks.
 4. Reduce width of statusbar spacer.